# is-twelve

./: .gitignore  CMakeLists.txt  Constant_Twelve.h  README.md  Twelve.cc  Twelve.h  testtwelve.cc
